<resources>
    <string name="app_name">Alisher Navoiy</string>
    <string name="hayoti_ijodi">Hayoti va ijodi</string>
    <string name="gazallari">G\'azallari</string>
    <string name="ruboiy_va_tuyuqlari">Ruboiy va tuyuqlari</string>
    <string name="lison_ut_tayr">Lison Ut-Tayr(Qush tili)</string>
    <string name="xamsa_asari">Xamsa asari</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="g_urbatda_g_arib">G\'URBATDA G\'ARIB...</string>
    <string name="ko_z_birla_qoshing_yaxshi">KO\'Z BIRLA QOSHING YAXSHI</string>
    <string name="gar_oshiq_esang">GAR OSHIQ ESANG</string>
    <string name="zohid_senga">ZOHID SENGA…</string>
    <string name="umri_aziz">UMRI AZIZ</string>
    <string name="xushluq">XUSHLUQ</string>
    <string name="jonimdagi_jim">JONIMDAGI JIM</string>
    <string name="o_pay">O\'PAY</string>
    <string name="yo_q_dahrda_bir_besar_u_sorson_mendek">Yo‘q dahrda bir besar-u sorson mendek...</string>
    <string name="yo_labmudur">YO LABMUDUR</string>
    <string name="bormog_in">BORMOG\'IN</string>
    <string name="olmangiz">OLMANGIZ</string>
    <string name="yoqilur">YOQILUR</string>
    <string name="olmani_otti_nigorim">OLMANI OTTI NIGORIM</string>
</resources>